# AnalysisG

./: .codedocs  .gitignore  .gitlab-ci.yml  .gitmodules  .main.py.swp  .main_new.py.swp  .readthedocs.yaml  .readthedocs.yml  CMakeLists.txt  CREATED_FILES_SUMMARY.md  Complete  DOCUMENTATION_FILES.md  DOCUMENTATION_SUMMARY.md  DOXYGEN_DOCUMENTATION.md  Detector  Dockerfile  Doxyfile  Makefile  Monitor.sh  MultiFile  README.md  README.md_old  SingleFile  TestDir.txt  TestReadSingleFile.txt  TestSignalDirectory.txt  TestSignalMultipleFile.txt  TruthChildren  TruthJets  TruthTops  coverage.json  generate_detailed_dox.py  generate_dox_files.py  hdf5-helpers_1.10.10+repack-3.1ubuntu4_amd64.deb  index.html  libaec-dev_1.1.2-1build1_amd64.deb  libaec0_1.1.2-1build1_amd64.deb  libhdf5-103-1t64_1.10.10+repack-3.1ubuntu4_amd64.deb  libhdf5-cpp-103-1t64_1.10.10+repack-3.1ubuntu4_amd64.deb  libhdf5-dev_1.10.10+repack-3.1ubuntu4_amd64.deb  (+12 more)
analysis-rebuild/: CMakeLists.txt  pyproject.toml
analysis-rebuild/src/AnalysisG/: __init__.py
analysis-rebuild/src/AnalysisG/Events/: __init__.py
analysis-rebuild/src/AnalysisG/Generators/: __init__.py
analysis-rebuild/src/AnalysisG/Graphs/: __init__.py
analysis-rebuild/src/AnalysisG/IO/: __init__.py
analysis-rebuild/src/AnalysisG/Notification/: __init__.py
analysis-rebuild/src/AnalysisG/Templates/: __init__.py
analysis-rebuild/src/AnalysisG/core/: CMakeLists.txt  event_template.pyx  graph_template.pxd  io.pxd  lossfx.pyx  model_template.pyx  (+4 more)
analysis-rebuild/src/analysisg/: cyanalysisg.cxx  cyanalysisg.pxd  cyanalysisg.pyx
analysis-rebuild/test/: test_eventgenerator.py  test_generator.py  test_imports.py  test_root_io.py
pyc/: CMakeLists.txt
pyc/benchmarks/: a100.sh  a100_main.py  a30_main.py  common.py  exec.sh  fx.py  h100.sh  h100_main.py  main.py  main.sh  pyc.py  v100.sh  v100_main.py
pyc/pyc/: CMakeLists.txt
pyc/pyc/core/: CMakeLists.txt  notification.pxd  notification.pyx  plotting.pxd  plotting.pyx  tools.pyx
pyc/pyc/cuatomic/: CMakeLists.txt
pyc/pyc/cutils/: CMakeLists.txt  atomic.cu  utils.cu  utils.cxx
pyc/pyc/graph/: CMakeLists.txt  graph.cu  graph.cxx  pagerank.cu
pyc/pyc/interface/: CMakeLists.txt  interface.cxx
pyc/pyc/nusol/: CMakeLists.txt  base.cu  intersection.cu  matrix.cu  nu.cu  nunu.cu  nusol.cu
pyc/pyc/operators/: CMakeLists.txt  operators.cu  operators.cxx
pyc/pyc/physics/: CMakeLists.txt  physics.cu
pyc/pyc/plotting/: CMakeLists.txt
pyc/pyc/tools/: CMakeLists.txt
pyc/pyc/transform/: CMakeLists.txt  transform.cu
pyc/test/: common.py  nusol.py  pagerank.py  pyc.py  test_graph.py  test_nusol.py  test_operators.py  test_physics.py  test_pyc.py  test_transform.py
src/AnalysisG/: CMakeLists.txt  __init__.py  check_filenames.cxx  main.md
src/AnalysisG/core/: CMakeLists.txt  __init__.dox  __init__.py  analysis.dox  analysis.pxd  analysis.pyx  analysis.pyx.dox  event_template.dox  event_template.pxd  event_template.pyx  event_template.pyx.dox  graph_template.dox  graph_template.pxd  graph_template.pyx  graph_template.pyx.dox  io.dox  io.pxd  io.pyx  io.pyx.dox  lossfx.dox  lossfx.pxd  lossfx.pyx  lossfx.pyx.dox  meta.dox  meta.pxd  meta.pyx  meta.pyx.dox  metric_template.dox  metric_template.pxd  metric_template.pyx  metric_template.pyx.dox  model_template.dox  model_template.pxd  model_template.pyx  model_template.pyx.dox  modules_documentation.md  notification.dox  notification.pxd  notification.pyx  notification.pyx.dox  (+24 more)
src/AnalysisG/events/: CMakeLists.txt  __init__.py  event_bsm_4tops.pxd  event_bsm_4tops.pyx
src/AnalysisG/generators/: CMakeLists.txt  __init__.py  analysis.pxd  analysis.pyx
src/AnalysisG/graphs/: CMakeLists.txt  graph_bsm_4tops.pxd  graph_bsm_4tops.pyx
src/AnalysisG/metrics/: CMakeLists.txt  __init__.py
src/AnalysisG/models/: CMakeLists.txt  __init__.py
src/AnalysisG/modules/: CMakeLists.txt  DOCUMENTATION.md  README.md  modules.md
src/AnalysisG/pyc/: CMakeLists.txt
src/AnalysisG/selections/: CMakeLists.txt
src/AnalysisG/templates/: main.md
src/AnalysisG/utils/: naming.cxx
src/codebase/: pyproject.toml
src/codebase/src/: CMakeLists.txt  __init__.py  __main__.py  main.cxx
studies/extension/cxx/: CMakeLists.txt  a.out  base.cxx  base.h  build.sh  lm.cxx  lm.h  main.cxx  matrix.cxx  matrix.h  mtx.cxx  mtx.h  nunu.cxx  nunu.h  nunu.pxd  nunu.pyx  particle.cxx  particle.h  solve.cxx  test.cxx  tools.cxx  tools.h
test/deprecated/: CompareChi2.py  ModelComparisonPlots.py  pyproject.toml  setup.cfg  setup.py
test/deprecated/src/: __init__.py
test/deprecated/test/: Model.py  Optimizer.py  exporter.py  import.py  tools.py
torch-extensions/: README.md  generate.py  pyproject.toml  setup.py
torch-extensions/_custom_build/: backend.py
torch-extensions/beta/: README.md  pyproject.toml  tox.ini
torch-extensions/beta/src/: CMakeLists.txt
torch-extensions/beta/tests/: .nusol.py.swo  common.py  nusol.py  test_cartesian_cuda.py  test_cartesian_floats.py  test_cartesian_tensors.py  test_import_modules.py  test_import_physics.py  test_nusol.py  test_operators.py  test_physics.py  test_physics_polar_cuda.py  test_polar_cuda.py  test_polar_floats.py  test_polar_tensors.py  test_transform.py
torch-extensions/custom-events/: _integrate_efficiency.py
torch-extensions/deprecated/NeutrinoReconstruction/: SingleNeutrino.py
torch-extensions/failed-installers/: pyproject.toml
torch-extensions/failed-installers/_original/: setup.py
torch-extensions/failed-installers/src/: cmake_install.cmake
torch-extensions/src/: CMakeLists.txt
torch-extensions/src/graph/: CMakeLists.txt
torch-extensions/src/interface/: CMakeLists.txt  pyc_cuda.cxx  pyc_cuda.h  pyc_floats.cxx  pyc_floats.h  pyc_tensors.cxx  pyc_tensors.h
torch-extensions/src/nusol/: CMakeLists.txt
torch-extensions/src/py_interface/: __init__.py  interface.py
torch-extensions/src/transform/: CMakeLists.txt
torch-extensions/tests/: CompareChi2.py  NeutrinoSolutionDeconstruct.py  PhysicsTest.py  TestNuRecon.py  TestNuReconVersions.py
torch-extensions/tests/custom-events/: Events.json
(+15930 files in other folders)
