[build-system]
requires = ["pip", "scikit-build-core", "cython"]
build-backend = "scikit_build_core.build"

[project]
name = "AnalysisG"
version = "5.0"
authors = []
requires-python = ">=3.7"
dependencies = [
    "pyAMI-atlas==5.1.0.1", 
    "tqdm", 
    "boost_histogram", 
    "mplhep"
]

[tool.scikit-build]
build-dir = "build"
wheel.license-files = []
logging.level = "INFO"
cmake.version = ">=3.23"
cmake.verbose = true

ninja.make-fallback = false
sdist.cmake = true
