[build-system]
requires = ["pip", "scikit-build-core", "cython", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "AnalysisG"
version = "5.0"
authors = []
requires-python = ">=3.7"
dependencies = [
    "pyAMI-atlas==5.1.0.1", 
    "boost_histogram", 
    "mplhep",
    "pyyaml",
    "tqdm", 
    "torchmetrics"
]

[tool.scikit-build]
build-dir = "build_scikit"
wheel.license-files = []
logging.level = "INFO"
cmake.version = ">=3.23"
build.verbose = true
ninja.make-fallback = true
sdist.cmake = true

