[build-system]
requires = ["pip", "scikit-build-core", "cython", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "AnalysisG"
version = "5.0"
authors = []
requires-python = ">=3.7"
dependencies = [
    "boost_histogram", 
    "pyAMI-core",
    "mplhep",
    "pyyaml",
    "tqdm", 
    "pwinput",
    "scipy",
    "h5py",
    "scikit-learn",
]

[tool.scikit-build]
build-dir = "build_scikit"
wheel.license-files = []
logging.level = "INFO"
cmake.version = ">=3.23"
build.verbose = true
ninja.make-fallback = true
sdist.cmake = true

