[options]
name = AnalysisG
package_dir = 
    AnalysisG = src
    AnalysisG.Notification = src/Notification
    AnalysisG.IO = src/IO
    AnalysisG.Settings = src/Settings
    AnalysisG.Templates = src/Templates
    AnalysisG.Events = src/Events
    AnalysisG.Particles = src/Events/Particles
    AnalysisG.Graphs = src/Events/Graphs
    AnalysisG.Tools = src/Tools
    AnalysisG.Generators = src/Generators
    AnalysisG.Plotting = src/Plotting 
    AnalysisG.Submission = src/Submission
    AnalysisG.Model = src/Model
    AnalysisG.Evaluation = src/Evaluation
install_requires = file: requirements.txt

