[build-system]
requires = ["pip", "scikit-build-core", "cython"] #, "pybind11[global]", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "AnalysisG"
version = "5.0"
authors = []
requires-python = ">=3.7"
dependencies = []

[tool.scikit-build]
#build-dir = "build"
wheel.license-files = []
minimum-version = "0.2"
logging.level = "INFO"
ninja.make-fallback = false

[tool.scikit-build.cmake]
minimum-version = "3.15"
verbose = true



