[build-system]
requires = ["pip", "scikit-build-core", "pybind11[global]"]
build-backend = "scikit_build_core.build"

[project]
name = "PyC"
version = "0.1"
authors = [
    {name = "woywoy123"}
]
readme.content-type = "text/markdown"
readme.file = "README.md"
requires-python = ">=3.7"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++", 
    "Programming Language :: CUDA", 
    "Topic :: Scientific/Engineering :: Physics", 
    "Intended Audience :: Science/Research"
]

[tool.scikit-build]
build-dir = "build"
wheel.license-files = []
minimum-version = "0.2"
logging.level = "INFO"
ninja.make-fallback = true

[tool.scikit-build.cmake]
minimum-version = "3.15"
verbose = true 
source-dir = "src"
args = []
