[options]
name = AnalysisTopGNN
package_dir = 
        AnalysisTopGNN = src
        AnalysisTopGNN.Templates = src/EventTemplates/Templates
        AnalysisTopGNN.Events = src/EventTemplates/Events
        AnalysisTopGNN.Particles = src/EventTemplates/Particles
        AnalysisTopGNN.Deprecated = src/EventTemplates/Deprecated
install_requires = file: requirements.txt
        
[options.packages.find]
include = AnalysisTopGNN*
