[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "PyExt"
version = "0.1"
requires-python = ">=3.7"
authors = [
    { name = "woywoy123" }, 
]

[tool.scikit-build]
build-dir = "build"
wheel.license-files = []

cmake.minimum-version = "3.15"
ninja.minimum-version = "1.5"
minimum-version = "0.2"

cmake.args = []
cmake.source-dir = "src"

cmake.verbose = true 
logging.level = "INFO"
