[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "PyExt"
version = "0.1"
requires-python = ">=3.7"
authors = [
    { name = "woywoy123" }, 
]

[tool.scikit-build]
build-dir = "build"
wheel.license-files = []
minimum-version = "0.2"
logging.level = "INFO"

[tool.scikit-build.cmake]
minimum-version = "3.15"
verbose = true 
source-dir = "src"
