[build-system]
requires = ["scikit-build-core", "pybind11", "wheel", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "AnaG" #AnalysisG-Extensions"
version = "1.2"
requires-python = ">=3.7"
authors = [
    { name = "woywyo123" }, 
]

[tool.scikit-build]
cmake.verbose = true 
#cmake.parallel = 12
logging.level = "INFO"
build-dir = "pyc-build"






